Feat: add new endpoints to gateway controller
