# docs/swagger.yaml
@@ -6,6 +6,15 @@ definitions:
         example: some error
         type: string
     type: object
+  controller.SubscribeRequest:
+    properties:
+      owner:
+        example: octocat
+        type: string
+      repo:
+        example: Hello-World
+        type: string
+    type: object
   domain.PingStatus:
     enum:
     - up
@@ -56,6 +65,15 @@ definitions:
     x-enum-varnames:
     - ServicesStatusOk
     - ServicesStatusDegraded
+  domain.Subscription:
+    properties:
+      owner:
+        example: octocat
+        type: string
+      repo:
+        example: Hello-World
+        type: string
+    type: object
 host: localhost:8080
 info:
   contact:
@@ -130,4 +148,129 @@ paths:
       summary: Get repository by GitHub URL
       tags:
       - repo
+  /subscriptions:
+    get:
+      description: Get all repository subscriptions
+      operationId: get-subscriptions
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/domain.Subscription'
+            type: array
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/controller.GetRepository.HTTPError'
+      summary: Get subscriptions
+      tags:
+      - subscriptions
+    post:
+      consumes:
+      - application/json
+      description: Create a subscription to an existing GitHub repository
+      operationId: subscribe-to-repository
+      parameters:
+      - description: Repository subscription
+        in: body
+        name: subscription
+        required: true
+        schema:
+          $ref: '#/definitions/controller.SubscribeRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/controller.GetRepository.HTTPError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/controller.GetRepository.HTTPError'
+        "409":
+          description: Conflict
+          schema:
+            $ref: '#/definitions/controller.GetRepository.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/controller.GetRepository.HTTPError'
+        "502":
+          description: Bad Gateway
+          schema:
+            $ref: '#/definitions/controller.GetRepository.HTTPError'
+      summary: Subscribe to a repository
+      tags:
+      - subscriptions
+  /subscriptions/{owner}/{repo}:
+    delete:
+      description: Delete an existing repository subscription
+      operationId: unsubscribe-from-repository
+      parameters:
+      - description: GitHub repository owner
+        example: octocat
+        in: path
+        name: owner
+        required: true
+        type: string
+      - description: GitHub repository name
+        example: Hello-World
+        in: path
+        name: repo
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/controller.GetRepository.HTTPError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/controller.GetRepository.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/controller.GetRepository.HTTPError'
+        "502":
+          description: Bad Gateway
+          schema:
+            $ref: '#/definitions/controller.GetRepository.HTTPError'
+      summary: Unsubscribe from a repository
+      tags:
+      - subscriptions
+  /subscriptions/info:
+    get:
+      description: Get GitHub information for every subscribed repository
+      operationId: get-subscribed-repository-info
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/domain.Repository'
+            type: array
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/controller.GetRepository.HTTPError'
+        "502":
+          description: Bad Gateway
+          schema:
+            $ref: '#/definitions/controller.GetRepository.HTTPError'
+      summary: Get subscribed repository information
+      tags:
+      - subscriptions
 swagger: "2.0"
